--- a/ultra_new (1).ipynb
+++ b/ultra_new (1).ipynb
@@ -80,6 +80,15 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "git clone https://github.com/dsmlr/Car-Parts-Segmentation.git"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 57,
       "metadata": {
         "id": "tcTQYvBJeScm"
